--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,3 +3,15 @@ marshall:
     name: Marshall S
     email: marshall@test.com
     password_digest: <%= User.digest('password') %> #All fixture users have the same PW 'password'
+    admin: true
+archer:
+    name: Sterling Archer
+    email: duchess@isis.gov
+    password_digest: <%= User.digest('password') %> 
+
+<% 30.times do |n| %>
+user_<%= n %>:
+    name: <%= "User #{n}" %>
+    email: <%= "user-#{n}@example.com" %>
+    password_digest: <%= User.digest('password') %>
+<% end %>
