--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,14 +4,20 @@ marshall:
     email: marshall@test.com
     password_digest: <%= User.digest('password') %> #All fixture users have the same PW 'password'
     admin: true
+    activated: true
+    activated_at: <%= Time.zone.now %>
 archer:
     name: Sterling Archer
     email: duchess@isis.gov
     password_digest: <%= User.digest('password') %> 
+    activated: true
+    activated_at: <%= Time.zone.now %>
 
 <% 30.times do |n| %>
 user_<%= n %>:
     name: <%= "User #{n}" %>
     email: <%= "user-#{n}@example.com" %>
     password_digest: <%= User.digest('password') %>
+    activated: true
+    activated_at: <%= Time.zone.now %>
 <% end %>
