--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -12,6 +12,20 @@ archer:
     password_digest: <%= User.digest('password') %> 
     activated: true
     activated_at: <%= Time.zone.now %>
+    
+mallory:
+    name: Mallory Archer
+    email: duchess2@isis.gov
+    password_digest: <%= User.digest('password') %> 
+    activated: true
+    activated_at: <%= Time.zone.now %>
+    
+lana:
+    name: Lana
+    email: duchess3@isis.gov
+    password_digest: <%= User.digest('password') %> 
+    activated: true
+    activated_at: <%= Time.zone.now %>    
 
 <% 30.times do |n| %>
 user_<%= n %>:
